[package]
name = "pdf-utils"
version = "0.0.1"
edition = "2021"
description = "CLI utilities for working with PDF files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asg017/pdf-utils"

[dependencies]
pdf-lib-rs = "0.0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
flate2 = "1"
png = "0.17"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile = "3"

[dev-dependencies]
insta = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
